[metadata]
name = asgard-agent
summary = Asgard Discovery Agent
description-file = README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    asgard_agent

[entry_points]
console_scripts =
    lookup = asgard_agent.lookup:main
    heartbeat = asgard_agent.heartbeat:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = asgard_agent/locale
domain = asgard_agent

[update_catalog]
domain = asgard_agent
output_dir = asgard_agent/locale
input_file = asgard_agent/locale/asgard_agent.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = asgard_agent/locale/asgard_agent.pot
